# spot-tty

./: Cargo.toml  install.ps1  install.sh  readme.md
src/: main.rs
src/app/: app.rs  events.rs  mod.rs  reducer.rs  state.rs
src/config/: settings.rs
src/navigation/: node.rs
src/services/: auth.rs  mod.rs  spotify.rs
src/ui/: cover.rs  explorer.rs  layout.rs  mod.rs  player.rs  profile.rs  sidebar.rs  status.rs  trackmenu.rs
