[package]
name = "spot-tty"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal backend
crossterm = "0.27"

# TUI renderer
ratatui = "0.26"

# Spotify API
rspotify = { version = "0.12", features = ["client-reqwest", "reqwest-rustls-tls"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# SQLite (persistent cache)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"
